APIs/googleapis.com/jobs/v4/javascript-client/README.md
# cloud_talent_solution_api

CloudTalentSolutionApi - JavaScript client for cloud_talent_solution_api
Cloud Talent Solution provides the capability to create, read, update, and delete job postings, as well as search jobs based on keywords and filters. 
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v4
- Package version: v4
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_talent_solution_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_talent_solution_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudTalentSolutionApi = require('cloud_talent_solution_api');

var defaultClient = CloudTalentSolutionApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudTalentSolutionApi.ProjectsApi()
var parent = "parent_example"; // {String} Required. Resource name of the tenant under which the event is created. The format is \"projects/{project_id}/tenants/{tenant_id}\", for example, \"projects/foo/tenants/bar\".
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'clientEvent': new CloudTalentSolutionApi.ClientEvent() // {ClientEvent} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.jobsProjectsTenantsClientEventsCreate(parent, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://jobs.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsClientEventsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsClientEventsCreate) | **POST** /v4/{parent}/clientEvents | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsCompaniesCreate**](docs/ProjectsApi.md#jobsProjectsTenantsCompaniesCreate) | **POST** /v4/{parent}/companies | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsCompaniesList**](docs/ProjectsApi.md#jobsProjectsTenantsCompaniesList) | **GET** /v4/{parent}/companies | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsCompleteQuery**](docs/ProjectsApi.md#jobsProjectsTenantsCompleteQuery) | **GET** /v4/{tenant}:completeQuery | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsCreate) | **POST** /v4/{parent}/tenants | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsBatchCreate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchCreate) | **POST** /v4/{parent}/jobs:batchCreate | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsBatchDelete**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchDelete) | **POST** /v4/{parent}/jobs:batchDelete | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsBatchUpdate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsBatchUpdate) | **POST** /v4/{parent}/jobs:batchUpdate | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsCreate**](docs/ProjectsApi.md#jobsProjectsTenantsJobsCreate) | **POST** /v4/{parent}/jobs | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsDelete**](docs/ProjectsApi.md#jobsProjectsTenantsJobsDelete) | **DELETE** /v4/{name} | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsGet**](docs/ProjectsApi.md#jobsProjectsTenantsJobsGet) | **GET** /v4/{name} | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsList**](docs/ProjectsApi.md#jobsProjectsTenantsJobsList) | **GET** /v4/{parent}/jobs | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsPatch**](docs/ProjectsApi.md#jobsProjectsTenantsJobsPatch) | **PATCH** /v4/{name} | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsSearch**](docs/ProjectsApi.md#jobsProjectsTenantsJobsSearch) | **POST** /v4/{parent}/jobs:search | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsJobsSearchForAlert**](docs/ProjectsApi.md#jobsProjectsTenantsJobsSearchForAlert) | **POST** /v4/{parent}/jobs:searchForAlert | 
*CloudTalentSolutionApi.ProjectsApi* | [**jobsProjectsTenantsList**](docs/ProjectsApi.md#jobsProjectsTenantsList) | **GET** /v4/{parent}/tenants | 


## Documentation for Models

 - [CloudTalentSolutionApi.ApplicationInfo](docs/ApplicationInfo.md)
 - [CloudTalentSolutionApi.BatchCreateJobsRequest](docs/BatchCreateJobsRequest.md)
 - [CloudTalentSolutionApi.BatchCreateJobsResponse](docs/BatchCreateJobsResponse.md)
 - [CloudTalentSolutionApi.BatchDeleteJobsRequest](docs/BatchDeleteJobsRequest.md)
 - [CloudTalentSolutionApi.BatchDeleteJobsResponse](docs/BatchDeleteJobsResponse.md)
 - [CloudTalentSolutionApi.BatchOperationMetadata](docs/BatchOperationMetadata.md)
 - [CloudTalentSolutionApi.BatchUpdateJobsRequest](docs/BatchUpdateJobsRequest.md)
 - [CloudTalentSolutionApi.BatchUpdateJobsResponse](docs/BatchUpdateJobsResponse.md)
 - [CloudTalentSolutionApi.ClientEvent](docs/ClientEvent.md)
 - [CloudTalentSolutionApi.CommuteFilter](docs/CommuteFilter.md)
 - [CloudTalentSolutionApi.CommuteInfo](docs/CommuteInfo.md)
 - [CloudTalentSolutionApi.Company](docs/Company.md)
 - [CloudTalentSolutionApi.CompanyDerivedInfo](docs/CompanyDerivedInfo.md)
 - [CloudTalentSolutionApi.CompensationEntry](docs/CompensationEntry.md)
 - [CloudTalentSolutionApi.CompensationFilter](docs/CompensationFilter.md)
 - [CloudTalentSolutionApi.CompensationInfo](docs/CompensationInfo.md)
 - [CloudTalentSolutionApi.CompensationRange](docs/CompensationRange.md)
 - [CloudTalentSolutionApi.CompleteQueryResponse](docs/CompleteQueryResponse.md)
 - [CloudTalentSolutionApi.CompletionResult](docs/CompletionResult.md)
 - [CloudTalentSolutionApi.CustomAttribute](docs/CustomAttribute.md)
 - [CloudTalentSolutionApi.CustomRankingInfo](docs/CustomRankingInfo.md)
 - [CloudTalentSolutionApi.DeviceInfo](docs/DeviceInfo.md)
 - [CloudTalentSolutionApi.HistogramQuery](docs/HistogramQuery.md)
 - [CloudTalentSolutionApi.HistogramQueryResult](docs/HistogramQueryResult.md)
 - [CloudTalentSolutionApi.Job](docs/Job.md)
 - [CloudTalentSolutionApi.JobDerivedInfo](docs/JobDerivedInfo.md)
 - [CloudTalentSolutionApi.JobEvent](docs/JobEvent.md)
 - [CloudTalentSolutionApi.JobQuery](docs/JobQuery.md)
 - [CloudTalentSolutionApi.JobResult](docs/JobResult.md)
 - [CloudTalentSolutionApi.LatLng](docs/LatLng.md)
 - [CloudTalentSolutionApi.ListCompaniesResponse](docs/ListCompaniesResponse.md)
 - [CloudTalentSolutionApi.ListJobsResponse](docs/ListJobsResponse.md)
 - [CloudTalentSolutionApi.ListTenantsResponse](docs/ListTenantsResponse.md)
 - [CloudTalentSolutionApi.Location](docs/Location.md)
 - [CloudTalentSolutionApi.LocationFilter](docs/LocationFilter.md)
 - [CloudTalentSolutionApi.MatchingJob](docs/MatchingJob.md)
 - [CloudTalentSolutionApi.MendelDebugInput](docs/MendelDebugInput.md)
 - [CloudTalentSolutionApi.Money](docs/Money.md)
 - [CloudTalentSolutionApi.NamespacedDebugInput](docs/NamespacedDebugInput.md)
 - [CloudTalentSolutionApi.Operation](docs/Operation.md)
 - [CloudTalentSolutionApi.PostalAddress](docs/PostalAddress.md)
 - [CloudTalentSolutionApi.ProcessingOptions](docs/ProcessingOptions.md)
 - [CloudTalentSolutionApi.RequestMetadata](docs/RequestMetadata.md)
 - [CloudTalentSolutionApi.ResponseMetadata](docs/ResponseMetadata.md)
 - [CloudTalentSolutionApi.SearchJobsRequest](docs/SearchJobsRequest.md)
 - [CloudTalentSolutionApi.SearchJobsResponse](docs/SearchJobsResponse.md)
 - [CloudTalentSolutionApi.SpellingCorrection](docs/SpellingCorrection.md)
 - [CloudTalentSolutionApi.Status](docs/Status.md)
 - [CloudTalentSolutionApi.Tenant](docs/Tenant.md)
 - [CloudTalentSolutionApi.TimeOfDay](docs/TimeOfDay.md)
 - [CloudTalentSolutionApi.TimestampRange](docs/TimestampRange.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/jobs: Manage job postings

